WIP: some updates

--- a/www/index.html
+++ b/www/index.html
@@ -6,12 +6,7 @@
 </head>
 
 <body>
-  <button>Toggle</button>
-
-  <x-condition current="foo">
-    <h1 slot="foo">Hello, World! AAAAA</h1>
-    <h1 slot="bar">Goodbye, World! BBBBB</h1>
-  </x-condition>
+  <my-app></my-app>
 
   <script src="js/demo.js"></script>
 </body>
