--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,11 @@
 <body>
   <my-app></my-app>
 
+  <x-condition $current="foo">
+    <h1 slot="foo">Hello, World! <x>bar</x> AAAAA</h1>
+    <h1 slot="bar">Goodbye, World! BBBBB</h1>
+  </x-condition>
+
   <script src="js/demo.js"></script>
 </body>
 
